[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "flask_limiter",
    "werkzeug",
    "cryptography",
    "flask",
    "markdown",
    "gunicorn",
    "python-dotenv>=1.2.2",
    "fpdf2>=2.8.7",
]
