[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "flask_limiter",
    "werkzeug",
    "flask",
    "markdown",
    "gunicorn",
    "python-dotenv>=1.2.2",
    "fpdf2>=2.8.7",
    "flask-talisman>=1.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
]
